8294217: Assertion failure: parsing found no loops but there are some

Reviewed-by: chagedorn, thartmann